appId: dev.akbal.opdsreader
---
- openLink: exp+opds-reader://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081
- tapOn:
    text: "Open"
    optional: true
- tapOn:
    text: "Reload"
    optional: true
- extendedWaitUntil:
    visible: "Library"
    timeout: 90000
- tapOn:
    point: "20%,35%"
- extendedWaitUntil:
    visible: "Download"
    timeout: 15000
    optional: true
- extendedWaitUntil:
    visible: "Read"
    timeout: 15000
    optional: true
- runFlow:
    when:
      visible: "Read"
    commands:
      - assertVisible:
          id: "book-detail-read"
- runFlow:
    when:
      visible: "Download"
    commands:
      - assertVisible:
          id: "book-detail-download"
