appId: dev.akbal.opdsreader
---
- openLink: exp+opds-reader://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081
- tapOn:
    text: "Open"
    optional: true
- tapOn:
    text: "Reload"
    optional: true
- extendedWaitUntil:
    visible: "Library"
    timeout: 90000
- tapOn:
    id: "library-filter"
- extendedWaitUntil:
    visible: "Sort By"
    timeout: 10000
- tapOn:
    text: "Done"
